2015-11-19  Ola Jeppsson  <ola@adapteva.com>

	* multicore/e-lib-inl.h (int e_dma_busy): New function.
	(int e_dma_start): New function.
	(int e_dma_copy): New function.
	(e_ctimer_start): New function.
	(e_ctimer_stop): New function.
	(e_ctimer_set): New function.
	(e_ctimer_get): New function.
	(e_wait): New function.
	* multicore/lib.S (wand_isr): sp should always be 64-bit aligned.
	* multicore/multicore.exp (board_info ldflags): Add .data_bank0

2015-11-09  Ola Jeppsson  <ola@adapteva.com>

	* multicore/e-lib-inl.h (pass): New function.
	(fail): New function.
	(e_wait): New function.
	* multicore/lib.S: New library file.
	(wand_isr): New interrupt service routine for WAND.
	* multicore/multicore.exp: Add lib.S to global_cc_options.
	* multicore/wand.c: New test.

2015-11-05  Ola Jeppsson  <ola@adapteva.com>

	* multicore/domino.c (main): Move
	code from interrupt_handler to after call to e_idle().
	(interrupt_handler): Do nothing.

2015-11-04  Ola Jeppsson  <ola@adapteva.com>

	* multicore/domino.c: New test.

2015-11-04  Ola Jeppsson  <ola@adapteva.com>

	* multicore/e-lib-inl.h: Minimal inline implementation of
	e-lib.
	* multicore/multicore.exp: New file for multicore C tests.

2015-11-04  Ola Jeppsson  <ola@adapteva.com>

	* 64bmode/64bmode.exp: Rename from 64bmode/allinsn.exp. Save
	and restore global variables.
	* allinsn.exp: Save and restore global variables.
	* atomics/atomics.exp: Rename from atomic/allinsn.exp. Save
	and restore global variables.

2015-10-30  Ola Jeppsson  <ola@adapteva.com>

	* atomics/allinsn.exp: New file.
	* atomics/testset.cgs: New test.
	* atomics/testutils.inc: New test.

2015-10-28  Ola Jeppsson  <ola@adapteva.com>

	* fmul-denormal-exception.s: Run in virtual environment.
	* fmul64-denormal-exception.s: Likewise.

2015-10-24  Ola Jeppsson  <ola@adapteva.com>

	* allinsn.exp (global_ld_option): Set default value if
	none is provided by base board configuration.
	* 64bmode/allinsn.exp: Likewise.
