@@ -1,5 +1,10 @@
 2015-11-19  Ola Jeppsson  <ola@adapteva.com>
 
+	* multicore/dma.c: New test.
+	* multicore/timers.c: New test.
+
+2015-11-19  Ola Jeppsson  <ola@adapteva.com>
+
 	* multicore/e-lib-inl.h (int e_dma_busy): New function.
 	(int e_dma_start): New function.
 	(int e_dma_copy): New function.
